Updated Home page

--- a/Web-Application/templates/dashboard/Home.html
+++ b/Web-Application/templates/dashboard/Home.html
@@ -292,6 +292,8 @@
 				<a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
 			</nav><!-- <input type="file" style="visibility: hidden;" /> -->
 		</div>
+		
+
 		<main class="mdl-layout__content mdl-color--grey-100">
 
 
@@ -306,201 +308,150 @@
 					</div>
 
 					<div class="cover-details">
-						<h3 id="cover-name">Tanmay Parekh</h3>
-						<p id="cover-intro">I love to read books. I am a big Potter fan. Mumbai is where I live. Blah blah blah</p>
+						<h3 id="cover-name">Name</h3>
+						<p id="cover-intro">Intro</p>
 					</div>
 
-									<!-- <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-										<use xlink:href="#piechart" mask="url(#piemask)">
-											<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
-										</svg> -->
+					<div class="cover-follow">
+						<a href="#" class="cover-follow-button mdl-button mdl-js-button mdl-js-ripple-effect">Follow</a>
+					</div>
 
-									<!-- <svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-										<use xlink:href="#piechart" mask="url(#piemask)">
-											<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-									</svg>
-									
-									<svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-										<use xlink:href="#piechart" mask="url(#piemask)">
-											<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-									</svg>
-									
-									<svg fill="currentColor" width="200px" height="200px" viewBox="0 0 1 1" class="demo-chart mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">
-										<use xlink:href="#piechart" mask="url(#piemask)">
-											<text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan dy="-0.07" font-size="0.2">%</tspan></text>
-										</svg> -->
+				</div>
 
-									</div>
+				<!-- LOWER LEFT BLOCK -->
 
-									<!-- LOWER LEFT BLOCK -->
+				<div class="mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
 
-									<div class="demo-graphs mdl-shadow--2dp mdl-color--white mdl-cell mdl-cell--8-col">
+					<!-- Heading -->
+					<div class="book-suggest-heading">
+						<i class="book-suggest-icon glyphicon glyphicon-bookmark"></i>
+						<h4>Recent books:</h4>
+					</div>
 
-										<div class="book-suggest-heading">
-											<h4>Your recent books:</h4>
-										</div>
+					<!-- List of books -->
+					<div class="booklist-suggest mdl-grid">
 
-										<div class="booklist-suggest mdl-grid">
-
-											<div class="book-suggest mdl-cell mdl-cell-4-col">
-												<img src="images/12345.png" width="100%">
-												<h5>Harry Potter</h5>
-												<h6>J.K. Rowling</h6>
-												<div class="rating">
-													<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
-													<p>4.3/5</p>
-												</div>
-											</div>
-
-											<div class="book-suggest mdl-cell mdl-cell--4-col">
-												<img src="images/12345.png" width="100%">  
-												<h5>Lord of the Rings</h5>
-												<h6>J. R. R. Tolkien</h6>
-												<div class="rating">
-													<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
-													<p>3.2/5</p>
-												</div>
-											</div>
-
-											<div class="book-suggest mdl-cell mdl-cell--4-col">
-												<img src="images/12345.png" width="100%">  
-												<h5>Game of Thrones</h5>
-												<h6>G. R. R. Martin</h6>
-												<div class="rating">
-													<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
-													<p>4.7/5</p>
-												</div>
-											</div>
-
-										</div>
-
-										<div class="mdl-card__actions mdl-card--border">
-											<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
-										</div>
-
-										<!-- SEPARATOR -->
-										<div class="demo-separator mdl-cell mdl-cell--1-col"></div>
-
-									<!-- <svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
-										<use xlink:href="#chart">
-									</svg>
-									<svg fill="currentColor" viewBox="0 0 500 250" class="demo-graph">
-										<use xlink:href="#chart">
-										</svg> -->
-									</div>
-
-									<!-- RIGHT CARDS -->
-
-									<div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
-
-										<!-- FIRST CARD -->
-										<div class="demo-updates mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
-
-											<div class="follower-list_heading">
-												<i class="friend-icon glyphicon glyphicon-hand-right"></i>
-												<h2 id="follower-list_head">Followers:</h2>
-											</div>
-
-											<div class="follower-list">
-												<ul class="follower-list_outer">
-													<li>
-														<p class="follower-list_name">Navneet Agarwal</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Ritwick Chaudhry</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Saurabh Garg</p>
-													</li>
-												</ul>
-											</div>
-
-											<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
-												<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
-											</div>
-												<!-- <div class="mdl-card__title mdl-card--expand mdl-color--teal-300"> -->
-												<!-- </div> -->
-											<!-- <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-												Non dolore elit adipisicing ea reprehenderit consectetur culpa.
-											</div> -->
-											<!-- <div class="mdl-card__actions mdl-card--border">
-												<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">Read More</a>
-											</div> -->
-										</div>
-
-										<!-- SEPARATOR -->
-										<div class="demo-separator mdl-cell--1-col"></div>
-
-										<!-- SECOND CARD -->
-										<div class="demo-options mdl-card mdl-color--deep-purple-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
-
-											<div class="follower-list_heading">
-												<i class="friend-icon glyphicon glyphicon-hand-left"></i>
-												<h2 id="follower-list_head">Followees:</h2>
-											</div>
-
-											<div class="follower-list">
-												<ul class="follower-list_outer">
-													<li>
-														<p class="follower-list_name">Navneet Agarwal</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Ritwick Chaudhry</p>
-													</li>
-													<li>
-														<p class="follower-list_name">Saurabh Garg</p>
-													</li>
-												</ul>
-											</div>
-
-											<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
-												<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
-											</div>
-											<!-- <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
-												<h3>View options</h3>
-												<ul>
-													<li>
-														<label for="chkbox1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-															<input type="checkbox" id="chkbox1" class="mdl-checkbox__input">
-															<span class="mdl-checkbox__label">Click per object</span>
-														</label>
-													</li>
-													<li>
-														<label for="chkbox2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-															<input type="checkbox" id="chkbox2" class="mdl-checkbox__input">
-															<span class="mdl-checkbox__label">Views per object</span>
-														</label>
-													</li>
-													<li>
-														<label for="chkbox3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-															<input type="checkbox" id="chkbox3" class="mdl-checkbox__input">
-															<span class="mdl-checkbox__label">Objects selected</span>
-														</label>
-													</li>
-													<li>
-														<label for="chkbox4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-															<input type="checkbox" id="chkbox4" class="mdl-checkbox__input">
-															<span class="mdl-checkbox__label">Objects viewed</span>
-														</label>
-													</li>
-												</ul>
-											</div>
-
-											<div class="mdl-card__actions mdl-card--border">
-												<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--blue-grey-50">Change location</a>
-												<div class="mdl-layout-spacer"></div>
-												<i class="material-icons">location_on</i>
-											</div>
- -->
-										</div>
-
-									</div>
-
-
+						<div class="book-suggest mdl-cell mdl-cell-4-col">
+							<img src="images/12345.png" width="100%">
+							<h5>Harry Potter</h5>
+							<h6>J.K. Rowling</h6>
+							<div class="rating">
+								<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span>
+								<p>4.3/5</p>
 							</div>
+						</div>
 
-						</main>
+						<div class="book-suggest mdl-cell mdl-cell--4-col">
+							<img src="images/12345.png" width="100%">  
+							<h5>Lord of the Rings</h5>
+							<h6>J. R. R. Tolkien</h6>
+							<div class="rating">
+								<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9734</span><span>&#9734</span>
+								<p>3.2/5</p>
+							</div>
+						</div>
+
+						<div class="book-suggest mdl-cell mdl-cell--4-col">
+							<img src="images/12345.png" width="100%">  
+							<h5>Game of Thrones</h5>
+							<h6>G. R. R. Martin</h6>
+							<div class="rating">
+								<span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span><span>&#9733</span>
+								<p>4.7/5</p>
+							</div>
+						</div>
+
 					</div>
+
+					<!-- Read more block -->
+					<div class="mdl-card__actions mdl-card--border">
+						<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">See More Books</a>
+					</div>
+
+				</div>
+
+				<!-- RIGHT CARDS -->
+
+				<div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
+
+					<!-- TOP RIGHT CARD -->
+					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
+
+						<!-- Follower heading -->
+						<div class="follower-list_heading mdl-color--light-blue-200">
+							<i class="friend-icon glyphicon glyphicon-hand-right"></i>
+							<h2 id="follower-list_head">Followers:</h2>
+						</div>
+
+						<!-- Follower list -->
+						<div class="follower-list">
+							<ul class="follower-list_outer">
+								<li>
+									<p class="follower-list_name">Navneet Agarwal</p>
+								</li>
+								<li>
+									<p class="follower-list_name">Ritwick Chaudhry</p>
+								</li>
+								<li>
+									<p class="follower-list_name">Saurabh Garg</p>
+								</li>
+							</ul>
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
+						</div>
+
+					</div>
+
+					<!-- SEPARATOR -->
+					<div class="demo-separator mdl-cell--1-col"></div>
+
+					<!-- BOTTOM CARD -->
+					<div class="mdl-card mdl-color--light-blue-100 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
+
+						<!-- Followee heading -->
+						<div class="followee-list_heading mdl-color--light-blue-200">
+							<i class="friend-icon glyphicon glyphicon-hand-left"></i>
+							<h2 id="followee-list_head">Followees:</h2>
+						</div>
+
+						<!-- Followee list -->
+						<div class="followee-list">
+							<ul class="followee-list_outer">
+								<li>
+									<p class="followee-list_name">Navneet Agarwal</p>
+								</li>
+								<li>
+									<p class="followee-list_name">Ritwick Chaudhry</p>
+								</li>
+								<li>
+									<p class="followee-list_name">Saurabh Garg</p>
+								</li>
+							</ul>
+						</div>
+
+						<!-- Read more block -->
+						<div class="mdl-card__actions mdl-card--border" id="follower_read-more">
+							<a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">View More</a>
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</main>
+	</div>
+					
+
+
+
+
+
+
 					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="position: fixed; left: -1000px; height: -1000px;">
 						<defs>
 							<mask id="piemask" maskContentUnits="objectBoundingBox">
